J_Calc/parser.output
Terminals unused in grammar

   T_Switch
   T_Case
   T_Default
   T_Decrem
   T_Increm


Grammar

    0 $accept: Program $end

    1 Program: Declaration_List

    2 Declaration_List: Declaration_List_Helper

    3 Declaration_List_Helper: Declaration_List_Helper Declaration
    4                        | Declaration

    5 Declaration: Variable_Declaration
    6            | Function_Declaration
    7            | Class_Declaration
    8            | Interface_Declaration

    9 Variable_Declaration: Variable ';'

   10 Variable_Declaration_List: /* empty */
   11                          | Variable_Declaration_List Variable_Declaration

   12 Variable: Type T_Identifier

   13 Type: T_Int
   14     | T_Double
   15     | T_Bool
   16     | T_String
   17     | Named_Type
   18     | Type T_Dims

   19 Named_Type: T_Identifier

   20 Function_Declaration: Type T_Identifier '(' Formal_List ')' Statement_Block
   21                     | T_Void T_Identifier '(' Formal_List ')' Statement_Block

   22 Formal_List: /* empty */
   23            | Formal_List_Helper

   24 Formal_List_Helper: Variable
   25                   | Formal_List ',' Variable

   26 Class_Declaration: T_Class T_Identifier T_Extends Named_Type Class_Implements_Rule '{' Field_List '}'
   27                  | T_Class T_Identifier Class_Implements_Rule '{' Field_List '}'

   28 Class_Implements_Rule: /* empty */
   29                      | T_Implements Named_Type_Comma_List

   30 Named_Type_Comma_List: Named_Type
   31                      | Named_Type_Comma_List ',' Named_Type

   32 Field_List: /* empty */
   33           | Field_List Variable_Declaration
   34           | Field_List Function_Declaration

   35 Interface_Declaration: T_Interface T_Identifier '{' Prototype_List '}'

   36 Prototype_List: /* empty */
   37               | Prototype_List Prototype

   38 Prototype: Type T_Identifier '(' Formal_List ')' ';'
   39          | T_Void T_Identifier '(' Formal_List ')' ';'

   40 Statement_Block: '{' Variable_Declaration_List Statement_List_Block_End

   41 Statement_List_Block_End: '}'
   42                         | Statement_List '}'

   43 Statement_List: Statement
   44               | Statement_List Statement

   45 Statement: If_Dangling_Statement
   46          | Non_Dangling_If_Statement

   47 Non_Dangling_If_Statement: ';'
   48                          | Expression ';'
   49                          | T_Print '(' Expression_List ')' ';'
   50                          | Return_Statement
   51                          | T_Break ';'
   52                          | Statement_Block
   53                          | T_While '(' Expression ')' Non_Dangling_If_Statement
   54                          | T_For '(' Expression_Wild ';' Expression ';' Expression_Wild ')' Non_Dangling_If_Statement
   55                          | If_Else_Statement

   56 If_Else_Statement: T_If '(' Expression ')' Non_Dangling_If_Statement T_Else Non_Dangling_If_Statement

   57 If_Dangling_Statement: T_If '(' Expression ')' Statement
   58                      | T_If '(' Expression ')' Non_Dangling_If_Statement T_Else If_Dangling_Statement
   59                      | T_While '(' Expression ')' If_Dangling_Statement
   60                      | T_For '(' Expression_Wild ';' Expression ';' Expression_Wild ')' If_Dangling_Statement

   61 Return_Statement: T_Return Expression_Wild ';'

   62 Expression_Wild: /* empty */
   63                | Expression

   64 Expression: Assignment_Expression
   65           | Constant
   66           | LValue
   67           | T_This
   68           | Call
   69           | Expression '+' Expression
   70           | Expression '-' Expression
   71           | Expression '*' Expression
   72           | Expression '/' Expression
   73           | Expression '%' Expression
   74           | Expression '<' Expression
   75           | Expression T_LessEqual Expression
   76           | Expression '>' Expression
   77           | Expression T_GreaterEqual Expression
   78           | Expression T_Equal Expression
   79           | Expression T_NotEqual Expression
   80           | Expression T_And Expression
   81           | Expression T_Or Expression
   82           | T_ReadInteger '(' ')'
   83           | T_ReadLine '(' ')'
   84           | T_New '(' T_Identifier ')'
   85           | T_NewArray '(' Expression ',' Type ')'
   86           | '!' Expression
   87           | '-' Expression
   88           | '(' Expression ')'

   89 Assignment_Expression: LValue '=' Expression

   90 LValue: Expression '[' Expression ']'
   91       | Field_Access_Expression

   92 Field_Access_Expression: T_Identifier
   93                        | Expression '.' T_Identifier

   94 Call: T_Identifier '(' Expression_List_Wild ')'
   95     | Expression '.' T_Identifier '(' Expression_List_Wild ')'

   96 Expression_List_Wild: /* empty */
   97                     | Expression_List

   98 Expression_List: Expression_List_Helper

   99 Expression_List_Helper: Expression
  100                       | Expression_List_Helper ',' Expression

  101 Constant: T_IntConstant
  102         | T_DoubleConstant
  103         | T_BoolConstant
  104         | T_StringConstant
  105         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 86
'%' (37) 73
'(' (40) 20 21 38 39 49 53 54 56 57 58 59 60 82 83 84 85 88 94 95
')' (41) 20 21 38 39 49 53 54 56 57 58 59 60 82 83 84 85 88 94 95
'*' (42) 71
'+' (43) 69
',' (44) 25 31 85 100
'-' (45) 70 87
'.' (46) 93 95
'/' (47) 72
';' (59) 9 38 39 47 48 49 51 54 60 61
'<' (60) 74
'=' (61) 89
'>' (62) 76
'[' (91) 90
']' (93) 90
'{' (123) 26 27 35 40
'}' (125) 26 27 35 41 42
error (256)
T_Void (258) 21 39
T_Bool (259) 15
T_Int (260) 13
T_Double (261) 14
T_String (262) 16
T_Class (263) 26 27
T_Null (264) 105
T_Else (265) 56 58
T_Extends (266) 26
T_This (267) 67
T_Interface (268) 35
T_Implements (269) 29
T_While (270) 53 59
T_For (271) 54 60
T_If (272) 56 57 58
T_Return (273) 61
T_Break (274) 51
T_New (275) 84
T_NewArray (276) 85
T_Print (277) 49
T_ReadInteger (278) 82
T_ReadLine (279) 83
T_Identifier (280) 12 19 20 21 26 27 35 38 39 84 92 93 94 95
T_StringConstant (281) 104
T_IntConstant (282) 101
T_DoubleConstant (283) 102
T_BoolConstant (284) 103
T_Switch (285)
T_Case (286)
T_Default (287)
T_Or (288) 81
T_And (289) 80
T_NotEqual (290) 79
T_Equal (291) 78
T_GreaterEqual (292) 77
T_LessEqual (293) 75
T_Decrem (294)
T_Increm (295)
NEGATION (296)
T_Dims (297) 18


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
Program (62)
    on left: 1, on right: 0
Declaration_List (63)
    on left: 2, on right: 1
Declaration_List_Helper (64)
    on left: 3 4, on right: 2 3
Declaration (65)
    on left: 5 6 7 8, on right: 3 4
Variable_Declaration (66)
    on left: 9, on right: 5 11 33
Variable_Declaration_List (67)
    on left: 10 11, on right: 11 40
Variable (68)
    on left: 12, on right: 9 24 25
Type (69)
    on left: 13 14 15 16 17 18, on right: 12 18 20 38 85
Named_Type (70)
    on left: 19, on right: 17 26 30 31
Function_Declaration (71)
    on left: 20 21, on right: 6 34
Formal_List (72)
    on left: 22 23, on right: 20 21 25 38 39
Formal_List_Helper (73)
    on left: 24 25, on right: 23
Class_Declaration (74)
    on left: 26 27, on right: 7
Class_Implements_Rule (75)
    on left: 28 29, on right: 26 27
Named_Type_Comma_List (76)
    on left: 30 31, on right: 29 31
Field_List (77)
    on left: 32 33 34, on right: 26 27 33 34
Interface_Declaration (78)
    on left: 35, on right: 8
Prototype_List (79)
    on left: 36 37, on right: 35 37
Prototype (80)
    on left: 38 39, on right: 37
Statement_Block (81)
    on left: 40, on right: 20 21 52
Statement_List_Block_End (82)
    on left: 41 42, on right: 40
Statement_List (83)
    on left: 43 44, on right: 42 44
Statement (84)
    on left: 45 46, on right: 43 44 57
Non_Dangling_If_Statement (85)
    on left: 47 48 49 50 51 52 53 54 55, on right: 46 53 54 56 58
If_Else_Statement (86)
    on left: 56, on right: 55
If_Dangling_Statement (87)
    on left: 57 58 59 60, on right: 45 58 59 60
Return_Statement (88)
    on left: 61, on right: 50
Expression_Wild (89)
    on left: 62 63, on right: 54 60 61
Expression (90)
    on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
    82 83 84 85 86 87 88, on right: 48 53 54 56 57 58 59 60 63 69 70
    71 72 73 74 75 76 77 78 79 80 81 85 86 87 88 89 90 93 95 99 100
Assignment_Expression (91)
    on left: 89, on right: 64
LValue (92)
    on left: 90 91, on right: 66 89
Field_Access_Expression (93)
    on left: 92 93, on right: 91
Call (94)
    on left: 94 95, on right: 68
Expression_List_Wild (95)
    on left: 96 97, on right: 94 95
Expression_List (96)
    on left: 98, on right: 49 97
Expression_List_Helper (97)
    on left: 99 100, on right: 98 100
Constant (98)
    on left: 101 102 103 104 105, on right: 65


State 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program                  go to state 9
    Declaration_List         go to state 10
    Declaration_List_Helper  go to state 11
    Declaration              go to state 12
    Variable_Declaration     go to state 13
    Variable                 go to state 14
    Type                     go to state 15
    Named_Type               go to state 16
    Function_Declaration     go to state 17
    Class_Declaration        go to state 18
    Interface_Declaration    go to state 19


State 1

   21 Function_Declaration: T_Void . T_Identifier '(' Formal_List ')' Statement_Block

    T_Identifier  shift, and go to state 20


State 2

   15 Type: T_Bool .

    $default  reduce using rule 15 (Type)


State 3

   13 Type: T_Int .

    $default  reduce using rule 13 (Type)


State 4

   14 Type: T_Double .

    $default  reduce using rule 14 (Type)


State 5

   16 Type: T_String .

    $default  reduce using rule 16 (Type)


State 6

   26 Class_Declaration: T_Class . T_Identifier T_Extends Named_Type Class_Implements_Rule '{' Field_List '}'
   27                  | T_Class . T_Identifier Class_Implements_Rule '{' Field_List '}'

    T_Identifier  shift, and go to state 21


State 7

   35 Interface_Declaration: T_Interface . T_Identifier '{' Prototype_List '}'

    T_Identifier  shift, and go to state 22


State 8

   19 Named_Type: T_Identifier .

    $default  reduce using rule 19 (Named_Type)


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 23


State 10

    1 Program: Declaration_List .

    $default  reduce using rule 1 (Program)


State 11

    2 Declaration_List: Declaration_List_Helper .
    3 Declaration_List_Helper: Declaration_List_Helper . Declaration

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 2 (Declaration_List)

    Declaration            go to state 24
    Variable_Declaration   go to state 13
    Variable               go to state 14
    Type                   go to state 15
    Named_Type             go to state 16
    Function_Declaration   go to state 17
    Class_Declaration      go to state 18
    Interface_Declaration  go to state 19


State 12

    4 Declaration_List_Helper: Declaration .

    $default  reduce using rule 4 (Declaration_List_Helper)


State 13

    5 Declaration: Variable_Declaration .

    $default  reduce using rule 5 (Declaration)


State 14

    9 Variable_Declaration: Variable . ';'

    ';'  shift, and go to state 25


State 15

   12 Variable: Type . T_Identifier
   18 Type: Type . T_Dims
   20 Function_Declaration: Type . T_Identifier '(' Formal_List ')' Statement_Block

    T_Identifier  shift, and go to state 26
    T_Dims        shift, and go to state 27


State 16

   17 Type: Named_Type .

    $default  reduce using rule 17 (Type)


State 17

    6 Declaration: Function_Declaration .

    $default  reduce using rule 6 (Declaration)


State 18

    7 Declaration: Class_Declaration .

    $default  reduce using rule 7 (Declaration)


State 19

    8 Declaration: Interface_Declaration .

    $default  reduce using rule 8 (Declaration)


State 20

   21 Function_Declaration: T_Void T_Identifier . '(' Formal_List ')' Statement_Block

    '('  shift, and go to state 28


State 21

   26 Class_Declaration: T_Class T_Identifier . T_Extends Named_Type Class_Implements_Rule '{' Field_List '}'
   27                  | T_Class T_Identifier . Class_Implements_Rule '{' Field_List '}'

    T_Extends     shift, and go to state 29
    T_Implements  shift, and go to state 30

    $default  reduce using rule 28 (Class_Implements_Rule)

    Class_Implements_Rule  go to state 31


State 22

   35 Interface_Declaration: T_Interface T_Identifier . '{' Prototype_List '}'

    '{'  shift, and go to state 32


State 23

    0 $accept: Program $end .

    $default  accept


State 24

    3 Declaration_List_Helper: Declaration_List_Helper Declaration .

    $default  reduce using rule 3 (Declaration_List_Helper)


State 25

    9 Variable_Declaration: Variable ';' .

    $default  reduce using rule 9 (Variable_Declaration)


State 26

   12 Variable: Type T_Identifier .
   20 Function_Declaration: Type T_Identifier . '(' Formal_List ')' Statement_Block

    '('  shift, and go to state 33

    $default  reduce using rule 12 (Variable)


State 27

   18 Type: Type T_Dims .

    $default  reduce using rule 18 (Type)


State 28

   21 Function_Declaration: T_Void T_Identifier '(' . Formal_List ')' Statement_Block

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 22 (Formal_List)

    Variable            go to state 34
    Type                go to state 35
    Named_Type          go to state 16
    Formal_List         go to state 36
    Formal_List_Helper  go to state 37


State 29

   26 Class_Declaration: T_Class T_Identifier T_Extends . Named_Type Class_Implements_Rule '{' Field_List '}'

    T_Identifier  shift, and go to state 8

    Named_Type  go to state 38


State 30

   29 Class_Implements_Rule: T_Implements . Named_Type_Comma_List

    T_Identifier  shift, and go to state 8

    Named_Type             go to state 39
    Named_Type_Comma_List  go to state 40


State 31

   27 Class_Declaration: T_Class T_Identifier Class_Implements_Rule . '{' Field_List '}'

    '{'  shift, and go to state 41


State 32

   35 Interface_Declaration: T_Interface T_Identifier '{' . Prototype_List '}'

    $default  reduce using rule 36 (Prototype_List)

    Prototype_List  go to state 42


State 33

   20 Function_Declaration: Type T_Identifier '(' . Formal_List ')' Statement_Block

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 22 (Formal_List)

    Variable            go to state 34
    Type                go to state 35
    Named_Type          go to state 16
    Formal_List         go to state 43
    Formal_List_Helper  go to state 37


State 34

   24 Formal_List_Helper: Variable .

    $default  reduce using rule 24 (Formal_List_Helper)


State 35

   12 Variable: Type . T_Identifier
   18 Type: Type . T_Dims

    T_Identifier  shift, and go to state 44
    T_Dims        shift, and go to state 27


State 36

   21 Function_Declaration: T_Void T_Identifier '(' Formal_List . ')' Statement_Block
   25 Formal_List_Helper: Formal_List . ',' Variable

    ')'  shift, and go to state 45
    ','  shift, and go to state 46


State 37

   23 Formal_List: Formal_List_Helper .

    $default  reduce using rule 23 (Formal_List)


State 38

   26 Class_Declaration: T_Class T_Identifier T_Extends Named_Type . Class_Implements_Rule '{' Field_List '}'

    T_Implements  shift, and go to state 30

    $default  reduce using rule 28 (Class_Implements_Rule)

    Class_Implements_Rule  go to state 47


State 39

   30 Named_Type_Comma_List: Named_Type .

    $default  reduce using rule 30 (Named_Type_Comma_List)


State 40

   29 Class_Implements_Rule: T_Implements Named_Type_Comma_List .
   31 Named_Type_Comma_List: Named_Type_Comma_List . ',' Named_Type

    ','  shift, and go to state 48

    $default  reduce using rule 29 (Class_Implements_Rule)


State 41

   27 Class_Declaration: T_Class T_Identifier Class_Implements_Rule '{' . Field_List '}'

    $default  reduce using rule 32 (Field_List)

    Field_List  go to state 49


State 42

   35 Interface_Declaration: T_Interface T_Identifier '{' Prototype_List . '}'
   37 Prototype_List: Prototype_List . Prototype

    T_Void        shift, and go to state 50
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 51

    Type        go to state 52
    Named_Type  go to state 16
    Prototype   go to state 53


State 43

   20 Function_Declaration: Type T_Identifier '(' Formal_List . ')' Statement_Block
   25 Formal_List_Helper: Formal_List . ',' Variable

    ')'  shift, and go to state 54
    ','  shift, and go to state 46


State 44

   12 Variable: Type T_Identifier .

    $default  reduce using rule 12 (Variable)


State 45

   21 Function_Declaration: T_Void T_Identifier '(' Formal_List ')' . Statement_Block

    '{'  shift, and go to state 55

    Statement_Block  go to state 56


State 46

   25 Formal_List_Helper: Formal_List ',' . Variable

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Variable    go to state 57
    Type        go to state 35
    Named_Type  go to state 16


State 47

   26 Class_Declaration: T_Class T_Identifier T_Extends Named_Type Class_Implements_Rule . '{' Field_List '}'

    '{'  shift, and go to state 58


State 48

   31 Named_Type_Comma_List: Named_Type_Comma_List ',' . Named_Type

    T_Identifier  shift, and go to state 8

    Named_Type  go to state 59


State 49

   27 Class_Declaration: T_Class T_Identifier Class_Implements_Rule '{' Field_List . '}'
   33 Field_List: Field_List . Variable_Declaration
   34           | Field_List . Function_Declaration

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 60

    Variable_Declaration  go to state 61
    Variable              go to state 14
    Type                  go to state 15
    Named_Type            go to state 16
    Function_Declaration  go to state 62


State 50

   39 Prototype: T_Void . T_Identifier '(' Formal_List ')' ';'

    T_Identifier  shift, and go to state 63


State 51

   35 Interface_Declaration: T_Interface T_Identifier '{' Prototype_List '}' .

    $default  reduce using rule 35 (Interface_Declaration)


State 52

   18 Type: Type . T_Dims
   38 Prototype: Type . T_Identifier '(' Formal_List ')' ';'

    T_Identifier  shift, and go to state 64
    T_Dims        shift, and go to state 27


State 53

   37 Prototype_List: Prototype_List Prototype .

    $default  reduce using rule 37 (Prototype_List)


State 54

   20 Function_Declaration: Type T_Identifier '(' Formal_List ')' . Statement_Block

    '{'  shift, and go to state 55

    Statement_Block  go to state 65


State 55

   40 Statement_Block: '{' . Variable_Declaration_List Statement_List_Block_End

    $default  reduce using rule 10 (Variable_Declaration_List)

    Variable_Declaration_List  go to state 66


State 56

   21 Function_Declaration: T_Void T_Identifier '(' Formal_List ')' Statement_Block .

    $default  reduce using rule 21 (Function_Declaration)


State 57

   25 Formal_List_Helper: Formal_List ',' Variable .

    $default  reduce using rule 25 (Formal_List_Helper)


State 58

   26 Class_Declaration: T_Class T_Identifier T_Extends Named_Type Class_Implements_Rule '{' . Field_List '}'

    $default  reduce using rule 32 (Field_List)

    Field_List  go to state 67


State 59

   31 Named_Type_Comma_List: Named_Type_Comma_List ',' Named_Type .

    $default  reduce using rule 31 (Named_Type_Comma_List)


State 60

   27 Class_Declaration: T_Class T_Identifier Class_Implements_Rule '{' Field_List '}' .

    $default  reduce using rule 27 (Class_Declaration)


State 61

   33 Field_List: Field_List Variable_Declaration .

    $default  reduce using rule 33 (Field_List)


State 62

   34 Field_List: Field_List Function_Declaration .

    $default  reduce using rule 34 (Field_List)


State 63

   39 Prototype: T_Void T_Identifier . '(' Formal_List ')' ';'

    '('  shift, and go to state 68


State 64

   38 Prototype: Type T_Identifier . '(' Formal_List ')' ';'

    '('  shift, and go to state 69


State 65

   20 Function_Declaration: Type T_Identifier '(' Formal_List ')' Statement_Block .

    $default  reduce using rule 20 (Function_Declaration)


State 66

   11 Variable_Declaration_List: Variable_Declaration_List . Variable_Declaration
   40 Statement_Block: '{' Variable_Declaration_List . Statement_List_Block_End

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 70
    T_This            shift, and go to state 71
    T_While           shift, and go to state 72
    T_For             shift, and go to state 73
    T_If              shift, and go to state 74
    T_Return          shift, and go to state 75
    T_Break           shift, and go to state 76
    T_New             shift, and go to state 77
    T_NewArray        shift, and go to state 78
    T_Print           shift, and go to state 79
    T_ReadInteger     shift, and go to state 80
    T_ReadLine        shift, and go to state 81
    T_Identifier      shift, and go to state 82
    T_StringConstant  shift, and go to state 83
    T_IntConstant     shift, and go to state 84
    T_DoubleConstant  shift, and go to state 85
    T_BoolConstant    shift, and go to state 86
    '-'               shift, and go to state 87
    '!'               shift, and go to state 88
    ';'               shift, and go to state 89
    '('               shift, and go to state 90
    '{'               shift, and go to state 55
    '}'               shift, and go to state 91

    Variable_Declaration       go to state 92
    Variable                   go to state 14
    Type                       go to state 35
    Named_Type                 go to state 16
    Statement_Block            go to state 93
    Statement_List_Block_End   go to state 94
    Statement_List             go to state 95
    Statement                  go to state 96
    Non_Dangling_If_Statement  go to state 97
    If_Else_Statement          go to state 98
    If_Dangling_Statement      go to state 99
    Return_Statement           go to state 100
    Expression                 go to state 101
    Assignment_Expression      go to state 102
    LValue                     go to state 103
    Field_Access_Expression    go to state 104
    Call                       go to state 105
    Constant                   go to state 106


State 67

   26 Class_Declaration: T_Class T_Identifier T_Extends Named_Type Class_Implements_Rule '{' Field_List . '}'
   33 Field_List: Field_List . Variable_Declaration
   34           | Field_List . Function_Declaration

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 107

    Variable_Declaration  go to state 61
    Variable              go to state 14
    Type                  go to state 15
    Named_Type            go to state 16
    Function_Declaration  go to state 62


State 68

   39 Prototype: T_Void T_Identifier '(' . Formal_List ')' ';'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 22 (Formal_List)

    Variable            go to state 34
    Type                go to state 35
    Named_Type          go to state 16
    Formal_List         go to state 108
    Formal_List_Helper  go to state 37


State 69

   38 Prototype: Type T_Identifier '(' . Formal_List ')' ';'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 22 (Formal_List)

    Variable            go to state 34
    Type                go to state 35
    Named_Type          go to state 16
    Formal_List         go to state 109
    Formal_List_Helper  go to state 37


State 70

  105 Constant: T_Null .

    $default  reduce using rule 105 (Constant)


State 71

   67 Expression: T_This .

    $default  reduce using rule 67 (Expression)


State 72

   53 Non_Dangling_If_Statement: T_While . '(' Expression ')' Non_Dangling_If_Statement
   59 If_Dangling_Statement: T_While . '(' Expression ')' If_Dangling_Statement

    '('  shift, and go to state 110


State 73

   54 Non_Dangling_If_Statement: T_For . '(' Expression_Wild ';' Expression ';' Expression_Wild ')' Non_Dangling_If_Statement
   60 If_Dangling_Statement: T_For . '(' Expression_Wild ';' Expression ';' Expression_Wild ')' If_Dangling_Statement

    '('  shift, and go to state 111


State 74

   56 If_Else_Statement: T_If . '(' Expression ')' Non_Dangling_If_Statement T_Else Non_Dangling_If_Statement
   57 If_Dangling_Statement: T_If . '(' Expression ')' Statement
   58                      | T_If . '(' Expression ')' Non_Dangling_If_Statement T_Else If_Dangling_Statement

    '('  shift, and go to state 112


State 75

   61 Return_Statement: T_Return . Expression_Wild ';'

    T_Null            shift, and go to state 70
    T_This            shift, and go to state 71
    T_New             shift, and go to state 77
    T_NewArray        shift, and go to state 78
    T_ReadInteger     shift, and go to state 80
    T_ReadLine        shift, and go to state 81
    T_Identifier      shift, and go to state 113
    T_StringConstant  shift, and go to state 83
    T_IntConstant     shift, and go to state 84
    T_DoubleConstant  shift, and go to state 85
    T_BoolConstant    shift, and go to state 86
    '-'               shift, and go to state 87
    '!'               shift, and go to state 88
    '('               shift, and go to state 90

    $default  reduce using rule 62 (Expression_Wild)

    Expression_Wild          go to state 114
    Expression               go to state 115
    Assignment_Expression    go to state 102
    LValue                   go to state 103
    Field_Access_Expression  go to state 104
    Call                     go to state 105
    Constant                 go to state 106


State 76

   51 Non_Dangling_If_Statement: T_Break . ';'

    ';'  shift, and go to state 116


State 77

   84 Expression: T_New . '(' T_Identifier ')'

    '('  shift, and go to state 117


State 78

   85 Expression: T_NewArray . '(' Expression ',' Type ')'

    '('  shift, and go to state 118


State 79

   49 Non_Dangling_If_Statement: T_Print . '(' Expression_List ')' ';'

    '('  shift, and go to state 119


State 80

   82 Expression: T_ReadInteger . '(' ')'

    '('  shift, and go to state 120


State 81

   83 Expression: T_ReadLine . '(' ')'

    '('  shift, and go to state 121


State 82

   19 Named_Type: T_Identifier .
   92 Field_Access_Expression: T_Identifier .
   94 Call: T_Identifier . '(' Expression_List_Wild ')'

    '('  shift, and go to state 122

    T_Identifier  reduce using rule 19 (Named_Type)
    T_Dims        reduce using rule 19 (Named_Type)
    $default      reduce using rule 92 (Field_Access_Expression)


State 83

  104 Constant: T_StringConstant .

    $default  reduce using rule 104 (Constant)


State 84

  101 Constant: T_IntConstant .

    $default  reduce using rule 101 (Constant)


State 85

  102 Constant: T_DoubleConstant .

    $default  reduce using rule 102 (Constant)


State 86

  103 Constant: T_BoolConstant .

    $default  reduce using rule 103 (Constant)


State 87

   87 Expression: '-' . Expression

    T_Null            shift, and go to state 70
    T_This            shift, and go to state 71
    T_New             shift, and go to state 77
    T_NewArray        shift, and go to state 78
    T_ReadInteger     shift, and go to state 80
    T_ReadLine        shift, and go to state 81
    T_Identifier      shift, and go to state 113
    T_StringConstant  shift, and go to state 83
    T_IntConstant     shift, and go to state 84
    T_DoubleConstant  shift, and go to state 85
    T_BoolConstant    shift, and go to state 86
    '-'               shift, and go to state 87
    '!'               shift, and go to state 88
    '('               shift, and go to state 90

    Expression               go to state 123
    Assignment_Expression    go to state 102
    LValue                   go to state 103
    Field_Access_Expression  go to state 104
    Call                     go to state 105
    Constant                 go to state 106


State 88

   86 Expression: '!' . Expression

    T_Null            shift, and go to state 70
    T_This            shift, and go to state 71
    T_New             shift, and go to state 77
    T_NewArray        shift, and go to state 78
    T_ReadInteger     shift, and go to state 80
    T_ReadLine        shift, and go to state 81
    T_Identifier      shift, and go to state 113
    T_StringConstant  shift, and go to state 83
    T_IntConstant     shift, and go to state 84
    T_DoubleConstant  shift, and go to state 85
    T_BoolConstant    shift, and go to state 86
    '-'               shift, and go to state 87
    '!'               shift, and go to state 88
    '('               shift, and go to state 90

    Expression               go to state 124
    Assignment_Expression    go to state 102
    LValue                   go to state 103
    Field_Access_Expression  go to state 104
    Call                     go to state 105
    Constant                 go to state 106


State 89

   47 Non_Dangling_If_Statement: ';' .

    $default  reduce using rule 47 (Non_Dangling_If_Statement)


State 90

   88 Expression: '(' . Expression ')'

    T_Null            shift, and go to state 70
    T_This            shift, and go to state 71
    T_New             shift, and go to state 77
    T_NewArray        shift, and go to state 78
    T_ReadInteger     shift, and go to state 80
    T_ReadLine        shift, and go to state 81
    T_Identifier      shift, and go to state 113
    T_StringConstant  shift, and go to state 83
    T_IntConstant     shift, and go to state 84
    T_DoubleConstant  shift, and go to state 85
    T_BoolConstant    shift, and go to state 86
    '-'               shift, and go to state 87
    '!'               shift, and go to state 88
    '('               shift, and go to state 90

    Expression               go to state 125
    Assignment_Expression    go to state 102
    LValue                   go to state 103
    Field_Access_Expression  go to state 104
    Call                     go to state 105
    Constant                 go to state 106


State 91

   41 Statement_List_Block_End: '}' .

    $default  reduce using rule 41 (Statement_List_Block_End)


State 92

   11 Variable_Declaration_List: Variable_Declaration_List Variable_Declaration .

    $default  reduce using rule 11 (Variable_Declaration_List)


State 93

   52 Non_Dangling_If_Statement: Statement_Block .

    $default  reduce using rule 52 (Non_Dangling_If_Statement)


State 94

   40 Statement_Block: '{' Variable_Declaration_List Statement_List_Block_End .

    $default  reduce using rule 40 (Statement_Block)


State 95

   42 Statement_List_Block_End: Statement_List . '}'
   44 Statement_List: Statement_List . Statement

    T_Null            shift, and go to state 70
    T_This            shift, and go to state 71
    T_While           shift, and go to state 72
    T_For             shift, and go to state 73
    T_If              shift, and go to state 74
    T_Return          shift, and go to state 75
    T_Break           shift, and go to state 76
    T_New             shift, and go to state 77
    T_NewArray        shift, and go to state 78
    T_Print           shift, and go to state 79
    T_ReadInteger     shift, and go to state 80
    T_ReadLine        shift, and go to state 81
    T_Identifier      shift, and go to state 113
    T_StringConstant  shift, and go to state 83
    T_IntConstant     shift, and go to state 84
    T_DoubleConstant  shift, and go to state 85
    T_BoolConstant    shift, and go to state 86
    '-'               shift, and go to state 87
    '!'               shift, and go to state 88
    ';'               shift, and go to state 89
    '('               shift, and go to state 90
    '{'               shift, and go to state 55
    '}'               shift, and go to state 126

    Statement_Block            go to state 93
    Statement                  go to state 127
    Non_Dangling_If_Statement  go to state 97
    If_Else_Statement          go to state 98
    If_Dangling_Statement      go to state 99
    Return_Statement           go to state 100
    Expression                 go to state 101
    Assignment_Expression      go to state 102
    LValue                     go to state 103
    Field_Access_Expression    go to state 104
    Call                       go to state 105
    Constant                   go to state 106


State 96

   43 Statement_List: Statement .

    $default  reduce using rule 43 (Statement_List)


State 97

   46 Statement: Non_Dangling_If_Statement .

    $default  reduce using rule 46 (Statement)


State 98

   55 Non_Dangling_If_Statement: If_Else_Statement .

    $default  reduce using rule 55 (Non_Dangling_If_Statement)


State 99

   45 Statement: If_Dangling_Statement .

    $default  reduce using rule 45 (Statement)


State 100

   50 Non_Dangling_If_Statement: Return_Statement .

    $default  reduce using rule 50 (Non_Dangling_If_Statement)


State 101

   48 Non_Dangling_If_Statement: Expression . ';'
   69 Expression: Expression . '+' Expression
   70           | Expression . '-' Expression
   71           | Expression . '*' Expression
   72           | Expression . '/' Expression
   73           | Expression . '%' Expression
   74           | Expression . '<' Expression
   75           | Expression . T_LessEqual Expression
   76           | Expression . '>' Expression
   77           | Expression . T_GreaterEqual Expression
   78           | Expression . T_Equal Expression
   79           | Expression . T_NotEqual Expression
   80           | Expression . T_And Expression
   81           | Expression . T_Or Expression
   90 LValue: Expression . '[' Expression ']'
   93 Field_Access_Expression: Expression . '.' T_Identifier
   95 Call: Expression . '.' T_Identifier '(' Expression_List_Wild ')'
